--- a/css/style.default.css
+++ b/css/style.default.css
@@ -3555,3 +3555,24 @@ a.list-group-item.active > .badge,
   left: 15px;
   right: 15px;
 }
+
+.cd-timeline-img.cd-location {
+  background: #f0ca45;
+}
+
+#cd-timeline {
+  position: relative;
+  padding: 2em 0;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+#cd-timeline::before {
+  /* this is the vertical line */
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 18px;
+  height: 100%;
+  width: 4px;
+  background: #d7e4ed;
+}
